force-app/main/default/objects/ZST_TCP_PAYR_OUT__x/ZST_TCP_PAYR_OUT__x.object-meta.xml
<CustomObject>
    <description>ZST_TCP_PAYR_OUTSet</description>
    <externalDataSource>TCP_STNSAP_SoldTo_ShipTo</externalDataSource>
    <externalName>ZST_TCP_PAYR_OUTSet</externalName>
    <label>ZST_TCP_PAYR_OUT</label>
    <pluralLabel>ZST_TCP_PAYR_OUTSet</pluralLabel>
</CustomObject>