force-app/main/default/objects/ZST_TCP_PAYR_OUT__x/fields/DIVISION__c.field-meta.xml
<CustomField>
    <fullName>DIVISION__c</fullName>
    <description>DIVISION</description>
    <externalDeveloperName>DIVISION</externalDeveloperName>
    <label>DIVISION</label>
    <length>2</length>
    <type>Text</type>
</CustomField>