force-app/main/default/objects/ZST_TCP_PAYR_OUT__x/fields/FULL_LOAD__c.field-meta.xml
<CustomField>
    <fullName>FULL_LOAD__c</fullName>
    <description>FULL_LOAD</description>
    <externalDeveloperName>FULL_LOAD</externalDeveloperName>
    <label>FULL_LOAD</label>
    <length>1</length>
    <type>Text</type>
</CustomField>