force-app/main/default/objects/ZST_TCP_PAYR_OUT__x/fields/ORDER_BLK__c.field-meta.xml
<CustomField>
    <fullName>ORDER_BLK__c</fullName>
    <description>ORDER_BLK</description>
    <externalDeveloperName>ORDER_BLK</externalDeveloperName>
    <label>ORDER_BLK</label>
    <length>2</length>
    <type>Text</type>
</CustomField>