force-app/main/default/objects/ZST_TCP_PAYR_OUT__x/fields/PARTNER_CNT__c.field-meta.xml
<CustomField>
    <fullName>PARTNER_CNT__c</fullName>
    <description>PARTNER_CNT</description>
    <externalDeveloperName>PARTNER_CNT</externalDeveloperName>
    <label>PARTNER_CNT</label>
    <length>3</length>
    <type>Text</type>
</CustomField>