force-app/main/default/objects/ZST_TCP_PAYR_OUT__x/fields/PARTNER_FUNC__c.field-meta.xml
<CustomField>
    <fullName>PARTNER_FUNC__c</fullName>
    <description>PARTNER_FUNC</description>
    <externalDeveloperName>PARTNER_FUNC</externalDeveloperName>
    <label>PARTNER_FUNC</label>
    <length>2</length>
    <type>Text</type>
</CustomField>