force-app/main/default/objects/ZST_TCP_PAYR_OUT__x/fields/PARTNER_NO__c.field-meta.xml
<CustomField>
    <fullName>PARTNER_NO__c</fullName>
    <description>PARTNER_NO</description>
    <externalDeveloperName>PARTNER_NO</externalDeveloperName>
    <label>PARTNER_NO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>