force-app/main/default/objects/ZST_TCP_PAYR_OUT__x/fields/POST_CODE__c.field-meta.xml
<CustomField>
    <fullName>POST_CODE__c</fullName>
    <description>POST_CODE</description>
    <externalDeveloperName>POST_CODE</externalDeveloperName>
    <label>POST_CODE</label>
    <length>10</length>
    <type>Text</type>
</CustomField>