force-app/main/default/objects/ZST_TCP_PAYR_OUT__x/fields/SALESORG__c.field-meta.xml
<CustomField>
    <fullName>SALESORG__c</fullName>
    <description>SALESORG</description>
    <externalDeveloperName>SALESORG</externalDeveloperName>
    <label>SALESORG</label>
    <length>4</length>
    <type>Text</type>
</CustomField>