force-app/main/default/objects/ZST_TCP_PAYR_OUT__x/fields/SOLD_TO__c.field-meta.xml
<CustomField>
    <fullName>SOLD_TO__c</fullName>
    <description>SOLD_TO</description>
    <externalDeveloperName>SOLD_TO</externalDeveloperName>
    <label>SOLD_TO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>