force-app/main/default/objects/ZST_TCP_PAYR_OUT__x/fields/STATUS__c.field-meta.xml
<CustomField>
    <fullName>STATUS__c</fullName>
    <description>STATUS</description>
    <externalDeveloperName>STATUS</externalDeveloperName>
    <label>STATUS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>